<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="125dip"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:text="@string/startRun" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="125dip"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:text="@string/addDAta" />

    <Button
        android:id="@+id/buttonEnd"
        android:layout_width="125dip"
        android:layout_height="wrap_content"
        android:text="@string/endRun" />

</LinearLayout>